cicd-dashboardbundle/kubenetes/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: dashboard
spec:
  containers:
  - name: test-container
    image: appropriate/curl
    command: ["sleep", "3600"]
