cicd-dashboardbundle/kubenetes/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: dashboard
spec:
  ingressClassName: nginx
  rules:
  - host: dashboard.ikocs.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dashboard-app-service
            port:
              number: 80
  - host: pro.dashboard.ikocs.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dashboard-app-service
            port:
              number: 9090
